K#3529 add SET_STATEVIEW_INSTANCE
